--- a/Caddyfile
+++ b/Caddyfile
@@ -1,34 +1,34 @@
-# 用空格分隔所有需要代理的域名
-hearingaid.shopym.com medicalequipment.com.cn www.medicalequipment.com.cn dohomekitchen.com www.dohomekitchen.com kids-fashion-magazine.com www.kids-fashion-magazine.com gtgsteel.com www.gtgsteel.com {
-    # 配置 HTTPS 证书（填写你的邮箱用于证书通知）
-    tls your-email@example.com  # 替换为你的实际邮箱
+# Space-separated list of all domains to proxy
+hearingaid.shopym.com medicalequipment.com.cn www.medicalequipment.com.cn {
+    # Configure HTTPS certificate (fill in your email for certificate notifications)
+    tls your-email@example.com  # Replace with your actual email
 
-    # 反向代理到后台服务
+    # Reverse proxy to backend service
     reverse_proxy http://172.18.0.1:8080
 
-    # 启用压缩提升性能
+    # Enable compression to improve performance
     encode gzip zstd
 
-    # 错误处理配置
+    # Error handling configuration
     handle_errors {
-        # 针对 404 错误的自定义响应
+        # Custom response for 404 errors
         @404 {
             expression int({http.error.status_code}) == 404
         }
-        respond @404 "页面未找到（404 Error）"
+        respond @404 "Page Not Found (404 Error)"
 
-        # 针对其他错误的默认响应
-        respond "服务器错误: {http.error.status_code}"
+        # Default response for other errors
+        respond "Server Error: {http.error.status_code}"
     }
 
-    # WebSocket 支持（如果后台服务需要 WebSocket）
+    # WebSocket support (if backend service requires WebSocket)
     @ws {
         header Connection Upgrade
         header Upgrade websocket
     }
-    reverse_proxy @ws http://172.18.0.1:8080  # 代理 WebSocket 请求到后台
+    reverse_proxy @ws http://172.18.0.1:8080  # Proxy WebSocket requests to backend
 
-    # 安全头部配置
+    # Security headers configuration
     header {
         Strict-Transport-Security "max-age=31536000; includeSubDomains"
         X-Content-Type-Options nosniff
@@ -37,7 +37,7 @@ hearingaid.shopym.com medicalequipment.com.cn www.medicalequipment.com.cn dohome
     }
 }
 
-# HTTP 自动重定向到 HTTPS
+# HTTP auto-redirect to HTTPS
 :80 {
     redir https://{host}{uri} permanent
 }
